Align fixed

--- a/src/style.css
+++ b/src/style.css
@@ -38,12 +38,19 @@ h3 {
 .product__price {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+
+.product__rating {
+  margin: 15px 0 20px;
+}
+
+.product__price {
   align-items: baseline;
 }
 
 .product__stars {
   display: flex;
-  margin: 15px 0 20px;
 }
 
 .star {
